methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (a<-1 to 7) {
        ^