methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var seenBaggle=false
  for (a<-1 to 7) {
    if (seenBaggle==false) {
      for (b<-1 to 7) {
        if (isOverBaggle==true) {
          seenBaggle=true
        }
        forward();
      }
    }
  }
}